--- a/frontend/index.html
+++ b/frontend/index.html
@@ -18,6 +18,9 @@
         </div>
         <div class="container-sm" v-if="authToken !== ''">
             <pre>Current AuthToken: {{ authToken }}</pre>
+            <div v-if="authToken !== ''">
+                <button v-on:click="logout" type="button" class="btn btn-sm btn-primary">Logout</button>
+            </div>
         </div>
         <div class="container-lg">
             <div v-if="authToken === ''">
@@ -26,22 +29,75 @@
                     <form v-on:submit="submitLogin">
                         <p>{{ warning }}</p>
                         <input v-model="username" placeholder="Username" />
-                        <input v-model="password" placeholder="Password" />
-                        <button v-on:click="submitLogin" type="submit">Login</button>
-                        <button v-on:click="submitSignup" type="submit">Signup</button>
+                        <input v-model="password" placeholder="Password" type="password" />
+                        <button v-on:click="submitLogin" type="submit" class="btn btn-sm btn-primary">Login</button>
+                        <button v-on:click="submitSignup" type="submit" class="btn btn-sm btn-primary">Signup</button>
                     </form>
                 </div>
             </div>
             <div v-if="authToken !== ''">
-                <div v-for="product in products" v-bind:key="product.id">
-                    <div class="row" style="padding-bottom: 2px;">
-                        <div class="col-sm">{{ product.name }}</div>
-                        <div class="col-sm">{{ product.grossPrice }}€</div>
-                        <div class="col-sm"><button type="button" class="btn-sm btn-primary">Add</button></div>
+                <div class="row">
+                    <div class="col-sm" v-for="product in products" v-bind:key="product.id">
+                        <div class="row" style="padding-bottom: 2px;">
+                            <div class="col-sm">{{ product.name }}</div>
+                            <div class="col-sm">{{ product.grossPrice }}€</div>
+                            <div class="col-sm"><button v-on:click="addOrRemoveProduct(product.id, 1)" type="button"
+                                    class="btn-sm btn-primary">Add</button></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row" v-if="cart">
+                    <div class="col-sm">
+                        <div class="row">
+                            <h2>Cart</h23>
+                        </div>
+                        <div class="row" v-for="set in cart.sets">
+                            <div class="col-sm" style="margin-top: 0.5em;">
+                                <div class="row">
+                                    <div class="col-sm">
+                                        <div>
+                                            <span style="font-size: small; border-bottom: lightgray solid;">Set</span>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row" style="margin-top: 0.5em;">
+                                    <div class="col-sm" style="border-bottom: goldenrod solid;">
+                                        <div v-for="item in set.items" class="row" style="padding-bottom: 2px;">
+                                            <div class="col-sm">{{ item.product.name }}</div>
+                                            <div class="col-sm">{{ item.quantity }} pcs</div>
+                                            <div class="col-sm">{{ item.product.grossPrice }}€/item</div>
+                                        </div>
+                                    </div>
+                                    <div class="col-sm" style="border-bottom: gold solid;">{{ set.grossPrice }}€</div>
+                                </div>
+                            </div>
+
+
+                        </div>
+                        <div class="row">
+                            <div class="col-sm">
+                                <div style="padding: 0.3em; max-width: min-content; border: lightgray dotted;">
+                                    <pre>TODO: Did not connect this to the API. Sorry</pre>
+                                    <form>
+                                        <input type="text" name="coupon" /><button class="btn btn-sm btn-primary">Apply
+                                            Coupon</button>
+                                    </form>
+                                </div>
+                            </div>
+                            <h3>{{ currentCheckoutSum }}€</h3>
+                        </div>
+                        <div class="row">
+                            <div class="col-sm offset-md-11"><button type="button" class="btn btn-primary"
+                                    v-on:click="checkout">Checkout</button></div>
+
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
+        <pre>This demo does not lock buttons while requests are in-flight, therefore you can spam buttons. I am aware of this.</pre>
+    </div>
+
     </div>
     <script src="index.js"></script>
 </body>
